--- a/flyoj-fe-b/package.json
+++ b/flyoj-fe-b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^2.3.18",
     "@vueup/vue-quill": "^1.2.0",
     "ace-builds": "^1.4.13",
     "axios": "^1.7.9",
     "element-plus": "^2.9.3",
+    "highlight.js": "^11.11.1",
     "js-cookie": "^3.0.5",
+    "prismjs": "^1.29.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
